--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ly-mobile-cli",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "mobile cli",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,9 @@
     "url": "https://github.com/lynnx4869/LY-mobile-cli/issues"
   },
   "homepage": "https://github.com/lynnx4869/LY-mobile-cli#readme",
+  "bin": {
+    "lycli": "./bin/lycli"
+  },
   "dependencies": {
     "chalk": "^1.1.3",
     "child_process": "^1.0.2",
